# md_consolidator

./: Cargo.toml  README.md
logs/: binance_logs.txt  deribit_logs.txt
src/: main.rs  models.rs
