[package]
name = "market_data_consol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-ws-client = "*"
tokio = "*"
chrono = "*"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = "*"